Reduce object count
git-svn-id: file:///home/svn/acars2006@4544 1e6d2d28-e1fb-0310-b8ab-81908d8c6b6a